# intropy-coding-test

./: .env.local  .gitignore  Dockerfile  README.md  api.service  deploy-template.yml  pyproject.toml
.github/workflows/: cicd.yml
alembic/: env.py
alembic/versions/: 1260f63e32b1_change_obselescence_data.py  454a0ab5dd65_add_item_id.py  6ecc9173dbb5_metrics.py  84787d5dbf48_add_core_entities.py  e12ca7e74732_modify_metric_data_table.py  eaa23960c4f9_add_core_entities.py
data/: metric_records.json  sqlite_compliant_queries.csv
src/: bootstrap.py  core.py  crosscutting.py  main.py
src/application/: __init__.py  mappers.py  services.py
src/crosscutting/: __init__.py
src/infrastructure/: __init__.py  auth.py  llm.py  loaders.py  orm.py  readers.py  writers.py
src/web/: __init__.py  bootstrap.py  contracts.py  middleware.py  routes.py
tests/: __init__.py  scenarios.py  steps.py  test_mappers.py  test_scenarios.py
