[tool.poetry]
name = "intropy-metrics-service"
version = "0.1.0"
description = "manages metrics"
authors = ["aidan"]

[tool.poetry.dependencies]
fastapi = "^0.104.0"
python = "^3.11"
sqlalchemy = "^2.0.42"
uvicorn = "^0.35.0"
sqlmodel = "^0.0.24"
structlog = "^25.4.0"
punq = "^0.6.1"
Flask = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"