[tool.poetry]
name = "intropy-metrics-service"
version = "0.1.0"
description = "manages metrics"
authors = ["aidan"]
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
fastapi = "^0.116.1"
python = "^3.11"
uvicorn = "^0.35.0"
sqlmodel = "^0.0.24"
structlog = "^25.4.0"
punq = "^0.7.0"
pydantic = "^2.11.7"
sqlalchemy = { version = "^2.0.42", extras = ["asyncio"] }
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
poetry-core = "^2.1.3"
pydantic-settings = "^2.10.1"
alembic = "^1.16.4"
boto3 = "^1.40.3"

[tool.poetry.dev-dependencies]
httpx = "^0.28.1"
pytest = "^8.4.1"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"